# pydoll-mcp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  TESTING.md  debug_chrome_port.py  pydoll-mcp  pydoll-mcp-fixed  pydoll_mcp.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_pydoll_direct.py  test_start_browser.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_browser_session.py  test_element_operations.py  test_mcp_protocol.py  test_server_basic.py  test_tab_operations.py
tests/integration/: __init__.py  test_end_to_end.py
